# python-infographics

./: .bumpversion.cfg  .gitignore  Makefile  README.md  environment.yml  make.cmd  pyproject.toml
arcgis/: README.md  infographics.aprx  infographics.pyt
config/: config.ini
docsrc/: api.rst  conf.py  index.rst
docsrc/notebooks/: create-infographics.ipynb
notebooks/: create-infographics.ipynb  notebook-template.ipynb
scripts/: make_data.py  make_pyt_archive.py
src/infographics/: __init__.py
testing/: test_infographics.py
